Fix invisible expertise images on mobile by adding width to is-center

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -666,6 +666,7 @@
   }
   .is-center {
     height: 30vh;
+    width: 100%;
   }
   .is-text-container {
     position: absolute;
@@ -781,6 +782,7 @@
   }
   .is-center {
     height: 25vh;
+    width: 100%;
   }
   .is-num {
     font-size: 3rem;
